@@ -31,6 +31,27 @@
   Template to calculate the id of the dependencies
   The template can contain {id}, {name} and {publisher} which will be replaced with the values from the corresponding dependency from app.json
   The default is '{publisher}.{name}.{id}'
+ .Parameter dependencyVersionTemplate
+  Template to calculate the version field of the dependencies, default is {version}
+  The template can contain {version} which will be replaced with the verson from the corresponding dependency from app.json
+  The template can also contain {major},{minor},{build} and {revision} which will be replaced with the fields from the version
+  The template can also contain {major+1},{minor+1},{build+1} and {revision+1} which will be replaced with the fields from the version incremented by 1 
+ .Parameter applicationDependencyId
+  Id of the application dependency
+  The default is 'Microsoft.Application'
+ .Parameter applicationDependency
+  Version/Template of the application dependency, default is the Application version from the app.json file
+  The template can contain {version} which will be replaced with the verson from the corresponding dependency from app.json
+  The template can also contain {major},{minor},{build} and {revision} which will be replaced with the fields from the version
+  The template can also contain {major+1},{minor+1},{build+1} and {revision+1} which will be replaced with the fields from the version incremented by 1 
+ .Parameter platformDependencyId
+  Id of the platform dependency
+  The default is 'Microsoft.Platform'
+ .Parameter platformDependency
+  Version/Template of the platform dependency, default is the Platform version from the app.json file
+  The template can contain {version} which will be replaced with the verson from the corresponding dependency from app.json
+  The template can also contain {major},{minor},{build} and {revision} which will be replaced with the fields from the version
+  The template can also contain {major+1},{minor+1},{build+1} and {revision+1} which will be replaced with the fields from the version incremented by 1 
  .Parameter destinationFolder
   Folder to create the NuGet package in. Defeault it to create a temporary folder and delete it after the NuGet package has been created
  .Example
@@ -62,11 +83,15 @@ Function New-BcNuGetPackage {
         [Parameter(Mandatory=$false)]
         [string] $dependencyIdTemplate = '{publisher}.{name}.{id}',
         [Parameter(Mandatory=$false)]
+        [string] $dependencyVersionTemplate = '{version}',
+        [Parameter(Mandatory=$false)]
         [string] $applicationDependencyId = 'Microsoft.Application',
         [Parameter(Mandatory=$false)]
         [string] $applicationDependency = '',
         [Parameter(Mandatory=$false)]
         [string] $platformDependencyId = 'Microsoft.Platform',
+        [Parameter(Mandatory=$false)]
+        [string] $platformDependency = '',
         [Parameter(Mandatory=$false)]
         [string] $runtimeDependencyId = '{publisher}.{name}.runtime-{version}',
         [switch] $isIndirectPackage,
@@ -79,6 +104,10 @@ Function New-BcNuGetPackage {
     function CopyFileToStream([string] $filename, [System.IO.Stream] $stream) {
         $bytes = [System.IO.File]::ReadAllBytes($filename)
         $stream.Write($bytes,0,$bytes.Length)
+    }
+
+    function GetDependencyVersionStr([string] $template, [System.Version] $version) {
+        return $template.Replace('{version}',"$version").Replace('{major}',$version.Major).Replace('{minor}',$version.Minor).Replace('{build}',$version.Build).Replace('{revision}',$version.Revision).Replace('{major+1}',($version.Major+1)).Replace('{minor+1}',($version.Minor+1)).Replace('{build+1}',($version.Build+1)).Replace('{revision+1}',($version.Revision+1))
     }
 
     Write-Host "Create NuGet package"
@@ -134,9 +163,20 @@ Function New-BcNuGetPackage {
         if (-not $packageAuthors) {
             $packageAuthors = $appJson.publisher
         }
-        if (-not $applicationDependency) {
-            if ($appJson.PSObject.Properties.Name -eq 'Application' -and $appJson.Application) {
+        if ($appJson.PSObject.Properties.Name -eq 'Application' -and $appJson.Application) {
+            if (-not $applicationDependency) {
                 $applicationDependency = $appJson.Application
+            }
+            else {
+                $applicationDependency = GetDependencyVersionStr -template $applicationDependency -version ([System.Version]::Parse($appJson.Application))
+            }
+        }
+        if ($appJson.PSObject.Properties.Name -eq 'Platform' -and $appJson.Platform) {
+            if (-not $platformDependency) {
+                $platformDependency = $appJson.Platform
+            }
+            else {
+                $platformDependency = GetDependencyVersionStr -template $platformDependency -version ([System.Version]::Parse($appJson.Platform))
             }
         }
 
@@ -182,7 +222,7 @@ Function New-BcNuGetPackage {
                 $id = Get-BcNuGetPackageId -packageIdTemplate $dependencyIdTemplate -publisher $_.publisher -name $_.name -id $dependencyId -version $_.version.replace('.','-')
                 $XmlObjectWriter.WriteStartElement("dependency")
                 $XmlObjectWriter.WriteAttributeString("id", $id)
-                $XmlObjectWriter.WriteAttributeString("version", $_.version)
+                $XmlObjectWriter.WriteAttributeString("version", (GetDependencyVersionStr -template $dependencyVersionTemplate -version ([System.Version]::Parse($_.version))))
                 $XmlObjectWriter.WriteEndElement()
             }
         }
@@ -192,10 +232,10 @@ Function New-BcNuGetPackage {
             $XmlObjectWriter.WriteAttributeString("version", $applicationDependency)
             $XmlObjectWriter.WriteEndElement()
         }
-        if ($appJson.PSObject.Properties.Name -eq 'Platform' -and  $appJson.Platform) {
+        if ($platformDependency) {
             $XmlObjectWriter.WriteStartElement("dependency")
             $XmlObjectWriter.WriteAttributeString("id", $platformDependencyId)
-            $XmlObjectWriter.WriteAttributeString("version", $appJson.Platform)
+            $XmlObjectWriter.WriteAttributeString("version", $platformDependency)
             $XmlObjectWriter.WriteEndElement()
         }
         if ($isIndirectPackage.IsPresent) {
